Lumber scenario. Adjust event die max. Revert storage type pile changes but keep button changes.

--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -258,6 +258,9 @@ table th {
 table.align-top td {
     vertical-align: top;
 }
+.align-top {
+    vertical-align: top;
+}
 
 .transparent-col {
     background-color: transparent;
