--- a/app/templates/play/attrib.html
+++ b/app/templates/play/attrib.html
@@ -27,20 +27,17 @@
             });
         });
     </script>
-    {% if subject.typename() == 'char' %}
-        {% set link = url_for('play_char', char_id=subject.id) %}
-    {% elif subject.typename() == 'item' %}
-        {% set link = url_for('play_item', item_id=subject.id) %}
-    {% else %}
-        Unexpected type {{ subject.typename() }}
+    {% set referrer_link = session.get('referrer_link') %}
+    {% if referrer_link %}
+        {% set link = referrer_link.get('url', '#') | safe %}
+        {% set letter = link_letters.next(link) %}
+        <script>linkForKey['{{ letter }}'] = "{{ link }}";</script>
+        &larr; back to
+        <a href="{{ link }}">{{ referrer_link.get('name', 'Previous') }}</a>
+        <span>[{{ letter }}]</span>
+        <br>
     {% endif %}
-    {% set letter = link_letters.next(link) %}
-    <script>linkForKey['{{ letter }}'] = "{{ link }}";</script>
-    Attribute of
-    <a href="{{ link }}">{{ subject.name }}</a>
-    <span>[{{ letter }}]</span>
-    <br>
-    <h2>{{ current.name }}</h2>
+    <h1>{{ current.name }} of {{ subject.name }}</h1>
     {% if current.description %}
        {{ current.description|htmlify }}
     {% endif %}
