Complete Lumber scenario. Make letters in grid clickable.

--- a/app/templates/configure/character.html
+++ b/app/templates/configure/character.html
@@ -11,6 +11,7 @@
     <p class="info">
         Participant in the story such as a team member, enemy, or NPC.
         Typically performs actions of some kind.
+        Also, hauling vehicles.
     </p>
     <form method="post">
         <label for="character-name">Name:</label>
